[package]
name = "rust-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.8.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.100.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
toml = "0.9.4"
futures-util = "0.3.31"
